Fixed print lines and spacing issues with PDF printing

--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,16 @@
 @layer utilities {
   .break-before-page {
     break-before: page;
+    page-break-before: always;
   }
   .break-inside-avoid {
     break-inside: avoid;
+    page-break-inside: avoid;
+    -webkit-column-break-inside: avoid;
   }
   .break-after-avoid {
     break-after: avoid;
+    page-break-after: avoid;
   }
 }
 
@@ -75,7 +79,10 @@
 /* PRINT MEDIA QUERIES */
 @media print {
   @page {
-    margin: 0;
+    margin-top: 10mm;
+    margin-bottom: 10mm;
+    margin-left: 0;
+    margin-right: 0;
     size: auto;
   }
 
